# CoreCI

./: .gitignore  README.md  config.py  dev.env  pyproject.toml  readme.md  test_job.py
dispatcher/: config.py  dispatcher.py  runner_manager.py  storage.py  types.py
dispatcher/templates/: index.html
scripts/: start.sh
test_runner/: config.py  storage.py  test_job.py  test_runner.py  test_runner_impl.py  utils.py
test_runner/templates/: files_of_run.html  list_runs.html
